[package]
name = "nkdbfi"
version = "0.1.0"
edition = "2018"
license = "BSD-3-Clause"
authors = ["Avery R. <contact@nekodjin.xyz>"]
homepage = "https://github.com/nekodjin/nkdbfi"
repository = "https://github.com/nekodjin/nkdbfi"
description = "A BrainFuck Interpreter with u8 cell size and infinite tape simulation."
documentation = ""
